# universal-memory-platform

./: .env.example  .gitignore  README.md  requirements.txt
.cursor/rules/: action-plan-guidelines.mdc  agentic-orchastration.mdc
backend/: Dockerfile  GCP_SETUP.md  docker-compose.yml  env.example  requirements.txt
backend/sdk/python/: pyproject.toml
backend/sdk/python/agentic_memory/: client.py
backend/sdk/python/examples/: assistant_memory.py  research_agent.py  universal_lite_flow.py
backend/src/api/: memory_router.py  rest_api.py
dashboard/: README.md
doc/Action-Plan/: universal-memory-action-plan.md
doc/Architecture/: competitive_analysis_document.md  dev_roadmap_markdown.md  universal_memory_technical_spec.md
frontend/: package-lock.json  package.json
sdk/python/: README.md
src/api/: middleware.py  rest_api.py
src/config/: defaults.py  environment.py
src/conflict_resolution/: contradiction_detector.py  resolution_engine.py
src/core/: graph_engine.py  ingest_engine.py
src/models/: edges.py  memory_request.py  memory_result.py  nodes.py
src/operations/: contradict_operation.py  recall_operation.py  remember_operation.py
src/performance/: index_manager.py  latency_tracker.py  production_monitoring.py  profiler.py  query_cache.py
src/ranking/: confidence_ranker.py  recency_ranker.py  relevance_ranker.py
src/retrieval/: context_retriever.py  coordinator.py  graph_retriever.py  semantic_retriever.py  temporal_retriever.py  utils.py
src/storage/: backend_registry.py  index_manager.py
src/strata/: abstract_stratum.py
(+46 files in other folders)
